--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,11 @@
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 			<version>4.0.3</version>
 		</dependency>
-
+		<!-- redis -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-redis</artifactId>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
